# intuition-core

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  biome.json  bunfig.toml  deny.toml  docker-compose.datastores.yml  docker-compose.published.yml  docker-compose.yml  example.env  package.json  process-compose.yaml  tsconfig.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-images.yml
.planning/: eng-13313-contract-artifacts-findings.md  intuition-core-open-source-spec.md  progress-log.md
.planning/open-source/: 00-vision-and-value.md  01-goals-principles-metrics.md  02-codebase-inventory.md  03-target-architecture.md  04-extraction-reconciliation-security.md  05-documentation-plan.md  06-roadmap-and-workstreams.md  07-decisions-and-risks.md  08-master-checklist.md  09-intuition-curves-publish-attempt.md  index.md
.process-compose/: devnet.yaml  indexing.yaml
apps/explorer/: README.md  package.json  tsconfig.json  turbo.json  vite.config.ts
crates/: README.md
crates/curves/: Cargo.toml  README.md
crates/curves/examples/: indexing_projection.rs
crates/curves/src/: errors.rs  fees.rs  lib.rs  linear.rs  math.rs  offset_progressive.rs  traits.rs  types.rs
crates/curves/tests/: invariants.rs  onchain_parity.rs  onchain_sweep.rs  parity.rs
crates/curves/tests/fixtures/: onchain_parity.json  onchain_sweep.json  parity.json
crates/projections/: Cargo.toml  README.md
crates/projections/src/: config.rs  coordinator.rs  error.rs  main.rs  metrics.rs  shard.rs  util.rs
crates/projections/src/event/: mod.rs  reader.rs  source.rs  typed_reader.rs
crates/projections/src/projection/: mod.rs  test_parity.rs  traits.rs
crates/projections/src/projection/dual/: core_entities.rs  mod.rs  vault_holders_index.rs  vault_state.rs
crates/projections/src/projection/surreal/: atom.rs  deposit.rs  fee.rs  mod.rs  price.rs  redeem.rs  triple.rs
crates/projections/src/projection/timescaledb/: account_registry.rs  activity_marker.rs  event_log.rs  funnel_tracker.rs  leaderboard_marker.rs  leaderboard_refresh.rs  mod.rs  position_tracking.rs  protocol_stats.rs  signals_analytics.rs  term_aggregates.rs  user_activity_batch.rs  vault_holders_index.rs  vault_state.rs
crates/projections/src/repo/: dead_letter_repo.rs  funnel_repo.rs  kg_market_repo.rs  leaderboard_repo.rs  mod.rs  position_repo.rs  user_activity_repo.rs  vault_repo.rs
crates/projections/src/resilience/: checkpoint.rs  circuit_breaker.rs  connection_manager.rs  mod.rs  retry.rs  supervised_adapters.rs  supervisor.rs  watchdog.rs
crates/projections/src/sink/: mod.rs  surreal.rs
crates/projections/src/worker/: batch.rs  core_entities.rs  mod.rs  pg.rs  surreal.rs
crates/rindexer-ingestion/: Cargo.toml  README.md  entrypoint.sh  rindexer.yaml
crates/rindexer-ingestion/abi/: MultiVault.json
crates/rindexer-ingestion/src/: handlers.rs  main.rs  metrics.rs  storage.rs
crates/rindexer-ingestion/src/rindexer_lib/indexers/: all_handlers.rs  mod.rs
crates/rindexer-ingestion/src/rindexer_lib/indexers/be_v_3_indexer/: mod.rs  multi_vault.rs
crates/rindexer-ingestion/src/rindexer_lib/typings/: mod.rs  networks.rs
crates/rindexer-ingestion/src/rindexer_lib/typings/be_v_3_indexer/events/: mod.rs  multi_vault.rs  multi_vault_abi_gen.rs
crates/shared/: Cargo.toml  README.md
crates/shared/src/: config.rs  errors.rs  graph_flags.rs  lib.rs  locking.rs  models.rs  parsed_event.rs  proptest_invariants.rs  test_utils.rs  types.rs
devnet/: deployments-testnet.json  devnet-deploy.sh  setup.sh
docker/: Dockerfile.api  Dockerfile.atom-services  Dockerfile.devnet  Dockerfile.ingestion  Dockerfile.projections  Dockerfile.timescale-migrations  Dockerfile.workers
docs/: README.md  api-reference.md  architecture.md  classification-taxonomy.md  configuration.md  container-images.md  contracts.md  data-model.md  enrichment-providers.md  example-queries.md  indexing-scope-config.md  indexing-scope.example.json  indexing-scope.md  local-devnet.md  openapi.yaml  release-process.md  run-your-own-node.md  rust-crate-boundaries.md  troubleshooting.md  v2-dev-staging-image-consumption.md  v2-migration-map.md  writing-a-classification-plugin.md  writing-an-enrichment-plugin.md
docs/adr/: indexing-scope-boundaries.md
migrations/timescale/: 000_create_schema_migrations.sql  001_create_event_store.sql  002_create_typed_event_tables.sql  003_create_projection_checkpoints.sql  004_create_event_log_tables.sql  005_create_account_table.sql  006_create_term_table.sql  007_create_vault_state_tables.sql  008_create_position_tables.sql  009_create_vault_holders_index.sql  010_create_signals_tables.sql  011_create_term_aggregates_tables.sql  012_create_protocol_stats_tables.sql  013_create_leaderboard_tables.sql  014_add_event_id_to_term_market_cap_history.sql  015_add_hypertable_event_id_indexes.sql  016_create_position_change_hourly.sql  017_create_pnl_leaderboard_period.sql  018_rebuild_position_change_caggs.sql  019_create_position_cumulative_hourly.sql  020_create_cumulative_refresh.sql  021_add_account_metadata_columns.sql  022_replace_pnl_leaderboard_period.sql  023_expand_leaderboard_cache.sql  025_add_position_version.sql  026_fix_leaderboard_functions.sql  027_fix_timescaledb_job_signatures.sql  028_fix_market_cap_inflation.sql  029_fix_vault_snapshot_and_holder_count.sql  030_fix_market_cap_formula.sql  031_fix_term_market_cap_history.sql  032_slow_leaderboard_cache_refresh.sql  033_enable_pg_stat_statements.sql  034_per_table_autovacuum.sql  035_create_user_behavior_analytics.sql  036_add_batch_projection_checkpoints.sql  037_create_experiment_assignment.sql  (+11 more)
scripts/: bootstrap.sh  datastores-ready.sh  dev-local.sh  enforce-bun-install.mjs  explore-data.sh  guard-supply-chain-policy.mjs  rindexer-local-run.sh  scope-dry-run.ts  smoke-index.sh  smoke-test.sh  sync-abis.ts  timescale-migrate.sh
(+105 files in other folders)
