[package]
name = "intuition-curves"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.85"
description = "Off-chain Rust parity library for Intuition bonding curves"
repository = "https://github.com/0xIntuition/intuition-core"
homepage = "https://github.com/0xIntuition/intuition-core"
documentation = "https://docs.rs/intuition-curves"
readme = "README.md"
keywords = ["intuition", "bonding-curves", "ethereum", "web3"]
categories = ["cryptography::cryptocurrencies", "mathematics"]

[lib]
name = "curves"
path = "src/lib.rs"

[dependencies]
alloy-primitives = { workspace = true, features = ["std", "serde"] }
num-bigint = "0.4"
num-traits = "0.2"
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
