[package]
name = "projections"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "projections"
path = "src/main.rs"

[dependencies]
curves = { package = "intuition-curves", path = "../curves" }
shared = { path = "../shared" }
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
surrealdb = { version = "3", default-features = false, features = ["protocol-ws", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
ahash = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
hex = "0.4"
uuid = { workspace = true }
