[package]
name = "rindexer-ingestion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rindexer-ingestion"
path = "src/main.rs"

[dependencies]
# rindexer core - use git version with all features
rindexer = { git = "https://github.com/joshstevens19/rindexer", tag = "v0.36.0" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "bigdecimal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ethereum types - must match rindexer's alloy version
alloy = { version = "1.0", features = ["full", "json-rpc"] }

# Numeric types for NUMERIC columns
bigdecimal = { version = "0.4", features = ["serde"] }

# Hex encoding
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Metrics
prometheus = "0.13"

# Fast hashing (for HashMap performance)
ahash = { workspace = true }

# HTTP server for metrics
axum = "0.7"

# HTTP client for RPC calls
reqwest = { version = "0.12", features = ["json"] }
