[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
dotenvy = { workspace = true }
bigdecimal = { version = "0.4", features = ["serde"] }
ahash = { workspace = true }

[dev-dependencies]
proptest = "1.6"
hex = "0.4"
